# persisted-stage-support

./: LICENSE  README.md  pyproject.toml
bak/: manifest.in
bak/working/: create_source_cte_table copy.jinja  learn_pandas_1.py  legal_data_reader.py
bak/working/v1/: create_source_cte_table.jinja  current_merge.jinja  delete_loaded copy.jinja  delete_loaded.jinja  drop_source_cte_table.jinja  duckdb_ld_util.py  hist_insert.jinja  hist_update.jinja
bak/working/vnone/: create_source_cte_table copy.jinja  current_merge copy.jinja  delete_loaded copy.jinja  hist_insert_sql copy.jinja  hist_update copy.jinja
doc/: .$Persisted Staging Models.drawio.bkp  .~lock.Persisted Staging Design Reference.odt#  .~lock.Persisted Staging Load Design Reference.odt#  Persisted Staging Design Reference V2.odt  Persisted Staging Design Reference.odt  Persisted Staging Load Design Reference.odt  Persisted Staging Models.drawio
src/perstageutil/duckdb/: __init__.py  _common.py  load.py  session.py  setup.py
src/perstageutil/duckdb/sql/: create_table_sql  script_work.sql  script_workV3.sql  setup_test_environment.sql  setup_test_environmentV2.sql  setup_test_environmentV3.sql
src/perstageutil/duckdb/templates/: create_cks_table.jinja  create_current_table.jinja  create_hist_table.jinja  create_source_cte_table.jinja  current_merge.jinja  hist_insert.jinja  hist_update.jinja
tests/: test_duckdbload.py  test_duckdblsetupandoad.py  test_duckdbsetup.py  testloc.py
tests/data/: test_persisted_stage.duckdb  test_persisted_stage_setup.duckdb  test_vault.duckdb
(+1 files in other folders)
